# fortimanager-mcp

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
src/fortimanager_mcp/: __init__.py  server.py
src/fortimanager_mcp/api/: client.py
src/fortimanager_mcp/tools/: dvm_tools.py  object_tools.py  policy_tools.py  system_tools.py
src/fortimanager_mcp/utils/: config.py  errors.py  install_gate.py
tests/: test_client.py  test_dvm_model_device.py  test_errors.py  test_fmg_safety.py  test_server_auth.py
