[project]
name = "fortimanager-mcp"
version = "1.7.0"
description = "Model Context Protocol server for FortiManager JSON RPC API"
authors = [
    {name = "Roland Stierli"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "pyfmg @ git+https://github.com/p4r4n0y1ng/pyfmg.git@7ec0a77e72758da2528abdbcdc415a9880cfa97a",
]

[project.scripts]
fortimanager-mcp = "fortimanager_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src/fortimanager_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests (require real FortiManager)",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyFMG.*"
ignore_missing_imports = true

# api.client wraps pyfmg, an untyped SDK whose response is `Any` for every
# endpoint. Casting at every public method (~68 sites) only relabels the
# type without validating the shape — pyfmg has no stubs to narrow
# against. Disable Any-return warnings here only; all other strict checks
# (no-untyped-def, no-implicit-optional, etc.) still apply.
[[tool.mypy.overrides]]
module = "fortimanager_mcp.api.client"
warn_return_any = false
